Fixed minor bug

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -609,11 +609,12 @@ body{
       padding-left:20px;
     }
 
-    .lesson_link{
+    .lesson_link, .topic_link{
       text-decoration: none;
       color:inherit;
       width:inherit;
     }
+
     .lesson-btn{
       font-size:18pt;
       margin-left:30px;
@@ -626,7 +627,6 @@ body{
     .topic_title .lesson-btn{
       color:#888;
     }
-
   }
 }
 
@@ -879,5 +879,10 @@ body{
       }
     }
   }
-
+  .topic_link{
+      text-decoration: none !important;
+      font-size:20pt;
+      width:100%;
+      color:@red;
+    }
 }
